--- a/projectpartfour.ipynb
+++ b/projectpartfour.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -431,31 +431,34 @@
      "text": [
       "\n",
       "Group Recommendations:\n",
-      "- Movie A\n",
-      "- Movie B\n",
-      "- Movie C\n",
-      "- Movie E\n",
-      "- Movie D\n",
+      "- Forrest Gump (1994)\n",
+      "- Speed (1994)\n",
+      "- Aliens (1986)\n",
+      "- Sleepless in Seattle (1993)\n",
+      "- Jurassic Park (1993)\n",
+      "- Twister (1996)\n",
+      "- Bound (1996)\n",
+      "- Hunt for Red October, The (1990)\n",
+      "- Godfather, The (1972)\n",
+      "- Citizen Kane (1941)\n",
       "\n",
       "WNCF Explanation:\n",
-      "Tie: There was a tie in relevance score with item 'Movie B'.\n",
-      "k: The item was in the top 2k entries of the expanded recommendation list.\n",
-      "Peers: 1 peers have rated the item with an average score of 3.0.\n",
-      "numPI: Less than the threshold number of similar peers have rated the item.\n",
+      "Tie: There was a tie in relevance score with item 'Aliens (1986)', which indicates multiple items had similar relevance to user preferences.\n",
+      "Peers: None of the peers have rated this item, indicating a potential gap in group interest.\n",
+      "numPI: Less than the threshold number of similar peers have rated the item, suggesting limited relevance among users with similar preferences.\n",
       "\n",
-      "Counterfactual Explanation:\n",
-      "Item 'Movie A' was not originally recommended.\n"
+      "Target Item for Explanation: Forrest Gump (1994) (356)\n",
+      "\n",
+      "Counterfactual Group Explanation:\n",
+      "If several group members had not liked 'Pulp Fiction (1994)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Pulp Fiction (1994)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
+      "If several group members had not liked 'Fugitive, The (1993)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Fugitive, The (1993)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
+      "If several group members had not liked 'Schindler's List (1993)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Schindler's List (1993)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
+      "If several group members had not liked 'Fargo (1996)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Fargo (1996)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
+      "If several group members had not liked 'Toy Story (1995)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Toy Story (1995)' had a significant influence on recommending 'Forrest Gump (1994)'.\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from collections import defaultdict\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
     "# Create user-item matrix for cosine similarity\n",
     "user_item_matrix = ratings.pivot(index='userId', columns='movieId', values='rating').fillna(0)\n",
     "\n",
@@ -483,17 +486,17 @@
     "\n",
     "# Function to recommend for a user based on similarity\n",
     "def recommend_for_user(user_id, user_item_matrix, similarity_df, num_recommendations=5):\n",
-    "    similar_users = similarity_df[user_id].sort_values(ascending=False)\n",
+    "    similar_users = similarity_df[user_id].nlargest(5)  # Limit to top 5 similar users for efficiency\n",
     "    user_rated_movies = user_item_matrix.loc[user_id]\n",
     "    watched_movies = set(user_rated_movies[user_rated_movies > 0].index)\n",
-    "    scores = pd.Series(dtype=np.float64)\n",
+    "    scores = np.zeros(user_item_matrix.shape[1])\n",
     "    \n",
     "    for similar_user, similarity_score in similar_users.items():\n",
     "        if similar_user == user_id:\n",
     "            continue\n",
-    "        weighted_ratings = user_item_matrix.loc[similar_user] * similarity_score\n",
-    "        scores = scores.add(weighted_ratings, fill_value=0)\n",
+    "        scores += user_item_matrix.loc[similar_user].values * similarity_score\n",
     "    \n",
+    "    scores = pd.Series(scores, index=user_item_matrix.columns)\n",
     "    scores = scores[~scores.index.isin(watched_movies | user_history[user_id] | group_history)]\n",
     "\n",
     "    # Genre-matching adjustment\n",
@@ -526,7 +529,7 @@
     "    group_history.update(top_recommendations)\n",
     "    return top_recommendations\n",
     "\n",
-    "# WNCF explanation generation with improvements\n",
+    "# # WNCF explanation generation (Note: The usefulness of WNCF explanations might be limited in this context, consider if it adds meaningful insights)\n",
     "def generate_wncf_explanation(group_users, user_item_matrix, similarity_df, item, k=5):\n",
     "    explanation = []\n",
     "    \n",
@@ -534,7 +537,7 @@
     "    if item not in user_item_matrix.columns:\n",
     "        explanation.append(\"I: The item was not in the recommendation set.\")\n",
     "        return explanation\n",
-    "    \n",
+    "\n",
     "    # Step 2: Check if item has no ratings\n",
     "    item_ratings = ratings[ratings['movieId'] == item]['rating']\n",
     "    if item_ratings.empty:\n",
@@ -543,70 +546,75 @@
     "\n",
     "    # Step 3: Check if there is a tie in the relevance score\n",
     "    for user_id in group_users:\n",
-    "        similar_users = similarity_df[user_id].sort_values(ascending=False)\n",
+    "        similar_users = similarity_df[user_id].nlargest(5)  # Limit to top 5 similar users for efficiency\n",
     "        user_rated_items = user_item_matrix.loc[user_id]\n",
     "        watched_items = set(user_rated_items[user_rated_items > 0].index)\n",
     "        \n",
-    "        scores = pd.Series(dtype=np.float64)\n",
+    "        scores = np.zeros(user_item_matrix.shape[1])\n",
     "        for similar_user, similarity_score in similar_users.items():\n",
     "            if similar_user == user_id:\n",
     "                continue\n",
-    "            weighted_ratings = user_item_matrix.loc[similar_user] * similarity_score\n",
-    "            scores = scores.add(weighted_ratings, fill_value=0)\n",
+    "            scores += user_item_matrix.loc[similar_user].values * similarity_score\n",
     "        \n",
+    "        scores = pd.Series(scores, index=user_item_matrix.columns)\n",
     "        if item in scores.index and scores[item] in scores.values:\n",
-    "            tied_item = scores.idxmax()  # Assuming the highest score item caused the tie\n",
-    "            explanation.append(f\"Tie: There was a tie in relevance score with item '{get_movie_title(tied_item)}'.\")\n",
+    "            tied_item = scores.idxmax()\n",
+    "            explanation.append(f\"Tie: There was a tie in relevance score with item '{get_movie_title(tied_item)}', which indicates multiple items had similar relevance to user preferences.\")\n",
     "            break\n",
     "\n",
-    "    # Step 4: Check if item is in the top 2k entries\n",
-    "    expanded_recommendations = scores.sort_values(ascending=False).head(2 * k)\n",
-    "    if item in expanded_recommendations.index:\n",
-    "        explanation.append(\"k: The item was in the top 2k entries of the expanded recommendation list.\")\n",
-    "    \n",
     "    # Step 5: Check if at least one peer has rated the item\n",
     "    peers_rated = [peer for peer in group_users if peer != user_id and item in user_item_matrix.columns and user_item_matrix.at[peer, item] > 0]\n",
     "    if peers_rated:\n",
     "        avg_rating = np.mean([user_item_matrix.at[peer, item] for peer in peers_rated])\n",
-    "        explanation.append(f\"Peers: {len(peers_rated)} peers have rated the item with an average score of {avg_rating:.1f}.\")\n",
+    "        explanation.append(f\"Peers: {len(peers_rated)} peers have rated the item with an average score of {avg_rating:.1f}. This suggests that the item was popular among multiple group members, contributing to its recommendation.\")\n",
     "    else:\n",
-    "        explanation.append(\"Peers: None of the peers have rated this item.\")\n",
+    "        explanation.append(\"Peers: None of the peers have rated this item, indicating a potential gap in group interest.\")\n",
     "\n",
     "    # Step 6: Check if less than numPI similar peers have rated the item\n",
     "    numPI = 3  # Threshold for similar peers\n",
     "    rated_by_similar_peers = len(peers_rated)\n",
     "    if rated_by_similar_peers < numPI:\n",
-    "        explanation.append(\"numPI: Less than the threshold number of similar peers have rated the item.\")\n",
+    "        explanation.append(\"numPI: Less than the threshold number of similar peers have rated the item, suggesting limited relevance among users with similar preferences.\")\n",
     "    \n",
     "    return explanation\n",
     "\n",
-    "# Counterfactual explanation generation\n",
-    "def generate_counterfactual_explanation(user_id, target_item, user_item_matrix, similarity_df, group_users):\n",
-    "    # Start by assuming that the target item is recommended\n",
-    "    original_recommendations = recommend_for_user(user_id, user_item_matrix, similarity_df)\n",
-    "    recommended_items = [item for item, _ in original_recommendations]\n",
+    "# Function to get movies commonly watched by group members\n",
+    "def get_common_watched_movies(group_users, user_item_matrix):\n",
+    "    # Create a matrix of movies watched by all group members\n",
+    "    group_watched = user_item_matrix.loc[group_users].astype(bool).sum(axis=0)\n",
+    "    # Select only movies watched by at least two group members\n",
+    "    common_watched_movies = group_watched[group_watched >= 2].nlargest(5).index  # Limit to top 5 most watched movies\n",
+    "    return common_watched_movies\n",
     "\n",
-    "    if target_item not in recommended_items:\n",
-    "        return f\"Item '{get_movie_title(target_item)}' was not originally recommended.\"\n",
-    "    \n",
-    "    # Systematically remove items from user history to see if the target item is removed from recommendations\n",
-    "    user_rated_movies = user_item_matrix.loc[user_id]\n",
-    "    watched_movies = set(user_rated_movies[user_rated_movies > 0].index)\n",
+    "# Counterfactual explanation generation for group\n",
+    "def generate_counterfactual_group_explanation(group_users, target_item, user_item_matrix, similarity_df):\n",
+    "    common_watched_movies = get_common_watched_movies(group_users, user_item_matrix)\n",
     "    explanation = []\n",
     "\n",
-    "    for movie in watched_movies:\n",
-    "        # Temporarily remove the movie from user history\n",
-    "        temp_user_item_matrix = user_item_matrix.copy()\n",
-    "        temp_user_item_matrix.at[user_id, movie] = 0\n",
-    "        new_recommendations = recommend_for_user(user_id, temp_user_item_matrix, similarity_df)\n",
-    "        new_recommended_items = [item for item, _ in new_recommendations]\n",
+    "    # Print target item information for better context\n",
+    "    print(f\"\\nTarget Item for Explanation: {get_movie_title(target_item)} ({target_item})\")\n",
     "\n",
-    "        # Check if the target item is no longer recommended\n",
-    "        if target_item not in new_recommended_items:\n",
-    "            explanation.append(f\"If you had not liked '{get_movie_title(movie)}', then '{get_movie_title(target_item)}' would not have been suggested.\")\n",
+    "    # Iterate over common watched movies\n",
+    "    for movie in common_watched_movies:\n",
+    "        # Zero out the relevant columns directly instead of creating a full copy\n",
+    "        original_values = user_item_matrix.loc[group_users, movie].copy()\n",
+    "        user_item_matrix.loc[group_users, movie] = 0\n",
+    "\n",
+    "        # Recalculate group recommendations\n",
+    "        new_group_recommendations = aggregate_group_recommendations(\n",
+    "            {user: recommend_for_user(user, user_item_matrix, similarity_df) for user in group_users},\n",
+    "            {user: 1.0 for user in group_users}\n",
+    "        )\n",
+    "\n",
+    "        # Restore the original values\n",
+    "        user_item_matrix.loc[group_users, movie] = original_values\n",
+    "\n",
+    "        # Check if target item is still in group recommendations\n",
+    "        if target_item not in new_group_recommendations:\n",
+    "            explanation.append(f\"If several group members had not liked '{get_movie_title(movie)}', then '{get_movie_title(target_item)}' would not have been suggested. This shows that '{get_movie_title(movie)}' had a significant influence on recommending '{get_movie_title(target_item)}'.\")\n",
     "\n",
     "    if not explanation:\n",
-    "        return f\"No single item removal was found to affect the recommendation of '{get_movie_title(target_item)}'.\"\n",
+    "        return f\"No common item removal was found to affect the recommendation of '{get_movie_title(target_item)}'. This indicates that '{target_item}' was recommended due to diverse preferences across the group.\"\n",
     "    else:\n",
     "        return \"\\n\".join(explanation)\n",
     "\n",
@@ -625,11 +633,10 @@
     "print(\"\\nWNCF Explanation:\")\n",
     "print(\"\\n\".join(wncf_explanation))\n",
     "\n",
-    "# Generate a counterfactual explanation for a specific user and item\n",
-    "user_to_explain = group_users[0]\n",
-    "counterfactual_explanation = generate_counterfactual_explanation(user_to_explain, item_to_explain, user_item_matrix, similarity_df, group_users)\n",
-    "print(\"\\nCounterfactual Explanation:\")\n",
-    "print(counterfactual_explanation)\n",
+    "# Generate a counterfactual explanation for the group\n",
+    "group_counterfactual_explanation = generate_counterfactual_group_explanation(group_users, item_to_explain, user_item_matrix, similarity_df)\n",
+    "print(\"\\nCounterfactual Group Explanation:\")\n",
+    "print(group_counterfactual_explanation)\n",
     "\n"
    ]
   },
